--- a/src/Directory.build.props
+++ b/src/Directory.build.props
@@ -4,7 +4,7 @@
   </ImportGroup>
 
   <PropertyGroup Label="Package">
-    <PackageProjectUrl>http://localhost</PackageProjectUrl>
-    <RepositoryUrl>http://localhost</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/kritikos-io/ExLibris</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/kritikos-io/ExLibris</RepositoryUrl>
   </PropertyGroup>
 </Project>
